style: box-shadow fix on ie11

--- a/src/scss/components/_product-card.scss
+++ b/src/scss/components/_product-card.scss
@@ -1,21 +1,21 @@
 .product-card {
-  font-family: 'Saira', sans-serif;
-  background: $white;
-  padding: 10px;
+  width: 100%;
   min-width: 250px;
   max-width: 500px;
-  width: 100%;
   min-height: 479px;
+  padding: 10px;
+  background: $white;
+  font-family: 'Saira', sans-serif;
 
   @media (prefers-color-scheme: dark) {
     background: #2c2c2c;
   }
 
   &__wrapper {
-    border: 1px solid $whitish;
-    border-radius: 5px;
     min-height: 460px;
     padding: 13px 15px;
+    border: 1px solid $whitish;
+    border-radius: 5px;
 
     @media (prefers-color-scheme: dark) {
       border: 1px solid $dark-gray;
@@ -23,11 +23,11 @@
   }
 
   &__header {
+    margin-bottom: 22px;
+    color: $almost-black;
     font-family: SairaSemiBold, sans-serif;
     font-size: 18px;
-    margin-bottom: 22px;
     letter-spacing: 0.1px;
-    color: $almost-black;
 
     @media (prefers-color-scheme: dark) {
       color: $light-gray;
@@ -41,26 +41,26 @@
 
     &::after,
     &::before {
-      content: "";
       display: table;
       clear: both;
+      content: "";
     }
   }
 
   &__info {
     @media screen and (min-width: $mobile-lg) {
+      width: 35%;
       padding-top: 50px;
       float: right;
-      width: 35%;
     }
   }
 
   &__price {
-    letter-spacing: 0.7px;
-    font-size: 25px;
+    margin: 0;
     color: $teal;
     font-family: SairaSemiBold, sans-serif;
-    margin: 0;
+    font-size: 25px;
+    letter-spacing: 0.7px;
 
     @media screen and (min-width: $mobile-lg) {
       font-size: 32px;
@@ -68,9 +68,9 @@
   }
 
   &__old-price {
+    color: $medium-gray;
     font-size: 20px;
     letter-spacing: 0.6px;
-    color: $medium-gray;
     text-decoration: line-through;
 
     @media screen and (min-width: $mobile-lg) {
@@ -83,14 +83,14 @@
   }
 
   &__additional-info {
-    font-size: 12px;
-    color: $gray;
     margin-top: 3px;
     margin-bottom: 32px;
+    color: $gray;
+    font-size: 12px;
 
     @media screen and (min-width: $mobile-lg) {
-      font-size: 16px;
       margin-top: 10px;
+      font-size: 16px;
     }
 
     @media (prefers-color-scheme: dark) {
@@ -100,27 +100,27 @@
 
   &__badge {
     position: absolute;
+    right: -1%;
+    bottom: -21px;
     width: 92px;
     height: 92px;
-    border-radius: 50%;
-    background-color: $teal;
-    bottom: -21px;
-    right: -1%;
-    transform: rotate(15deg);
-    font-size: 18px;
-    text-align: center;
     padding-top: 30px;
     margin: 0;
+    background-color: $teal;
+    border-radius: 50%;
     color: $tealish;
+    font-size: 18px;
     line-height: 17px;
+    text-align: center;
+    transform: rotate(15deg);
 
     .product-card:hover & {
       animation: pulse 1s ease-in-out;
     }
 
     @media screen and (min-width: $mobile-lg) {
-      bottom: -10px;
       right: -35px;
+      bottom: -10px;
     }
   }
 
@@ -133,13 +133,13 @@
   }
 
   &__more {
+    padding: 0 10px;
     color: $electric-blue;
     font-size: 18px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
     transition: color 0.2s ease-in-out;
-    padding: 0 10px;
 
     @media (prefers-color-scheme: dark) {
       color: $blue;
@@ -152,15 +152,15 @@
         &::before,
         &::after {
           position: absolute;
-          content: "";
-          left: 0;
           bottom: -0.1rem;
+          left: 0;
           display: block;
           width: 100%;
           height: 1px;
           background: $electric-blue;
-          transition: 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+          content: "";
           opacity: 0;
+          transition: 1.1s cubic-bezier(0.19, 1, 0.22, 1);
         }
 
         &::before {
@@ -175,15 +175,15 @@
 
         &:hover {
           &::before {
+            opacity: 1;
             transform: scaleX(1);
             transition-delay: 0.25s;
-            opacity: 1;
           }
 
           &::after {
+            opacity: 1;
             transform: scaleX(0);
             transition-delay: 0s;
-            opacity: 1;
           }
         }
       }
@@ -191,17 +191,18 @@
   }
 
   &__image {
-    min-height: 230px;
     position: relative;
+    min-height: 230px;
     margin-bottom: 11px;
     background-color: $white;
 
     @media screen and (min-width: $mobile-lg) {
-      float: left;
-      min-height: 300px;
       width: 65%;
-      box-shadow: rgb(0 0 0 / 10%) 4px 5px 20px -4px;
+      min-height: 300px;
       border-radius: 15px;
+      box-shadow: rgb(0 0 0 / 10%) 4px 5px 20px -4px;
+      -ms-box-shadow: rgb(0 0 0 / 10%) 4px 5px 20px 0px;
+      float: left;
       transform: translate(-9%, 0);
     }
 
@@ -209,15 +210,15 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
       max-width: 188px;
       height: auto;
       max-height: 100%;
+      transform: translate(-50%, -50%);
 
       @media screen and (min-width: $mobile-lg) {
         width: auto;
-        height: auto;
         max-width: 85%;
+        height: auto;
       }
     }
   }
@@ -230,9 +231,9 @@
   }
 
   &__logo {
-    float: left;
     max-width: 20px;
-    margin-left: -4px;
     margin-right: 5px;
+    margin-left: -4px;
+    float: left;
   }
 }
